# KinePredict

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  TECHNICAL_SPEC.md
include/kinepredict/data_structures/: BloomFilter.h  PriorityQueue.h  Trie.h
include/kinepredict/text_processing/: TextProcessor.h
src/: main.cpp
src/data_structures/: BloomFilter.cpp  Trie.cpp
tests/: CMakeLists.txt  test_bloom_filter.cpp  test_priority_queue.cpp  test_trie.cpp
